# mavlink-shouter

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.adoc
.github/workflows/: default.yml
config/: config.yml  default.yml  example.yml
src/: bencher.rs  config.rs  definitions.rs  lib.rs  log_error.rs  main.rs  mavlink.rs  router.rs
src/endpoint/: mod.rs  receiver.rs  sender.rs  target_database.rs  transmitter.rs  udp.rs
src/endpoint/transmitter/: mod.rs  tcp.rs  udp.rs
src/endpoints/: mod.rs  receiver.rs  sender.rs  target_database.rs  transmitter.rs  udp.rs
src/mavlink/: codec.rs  deserializer.rs  mod.rs
src/mavlink/definitions/: mod.rs  msg_parser.rs  parser.rs
tests/resources/: config.yml
