[package]
name = "mavlink-shouter"
authors = ["Jakob Widauer <jakob.widauer@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jwidauer/mavlink-shouter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
config = "0.14.0"
env_logger = "0.11.2"
log = "0.4.20"
parking_lot = "0.12.1"
quick-xml = "0.31.0"
serde = { version = "1.0.204", features = ["serde_derive"] }
thiserror = "1.0.62"
tokio = { version = "1.37.0", features = ["full"] }
